Fixed overflow in last modified bar

--- a/resources/components/footer.less
+++ b/resources/components/footer.less
@@ -9,7 +9,6 @@
 	&-content {
 		margin: 0 auto;
 		padding: 12px @margin-side;
-		width: 100%;
 		max-width: @footer-width;
 		display: flex;
 		align-items: center;
